--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.session:spring-session-jdbc'	// session 정보를 DB에 저장하기 위해 사용
+	implementation 'com.h2database:h2'
+
 //	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-aws-messaging'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-aws-parameter-store-config'
